Fixes email buttons align bug on small width device

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -357,7 +357,7 @@ section.question {
         margin: 24px 0 48px;
 
         button {
-            margin-right: 20px;
+            margin: 0 20px 12px 0;
         }
     }
 
