--- a/frontend/src/styles/responsive.scss
+++ b/frontend/src/styles/responsive.scss
@@ -49,10 +49,6 @@
 
     #feedback #section-buttons {
         margin: 24px 0;
-
-        button:first-child {
-            margin-bottom: 12px;
-        }
     }
 }
 
